name:                effects
version:             0
synopsis:            Computational Effects

description:         An alternative to Monad Transformers.

category:            Control, Monads
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
stability:           experimental
homepage:            http://github.com/sjoerdvisscher/effects
bug-reports:         http://github.com/sjoerdvisscher/effects/issues

build-type:          Simple
cabal-version:       >= 1.10

Library
  HS-Source-Dirs:      src
  build-depends:       base >= 3 && < 5, transformers >= 0.2 && < 0.3
  default-language:    Haskell2010
  exposed-modules:     
    Control.Effects

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/effects.git